# attendance_2

./: README.md  dummy_QR_Camera.py  list_cameras.py  main.py  pyproject.toml  requirements.txt  reservations.json
app/: main.py  schemas.py
app/routers/: reservation_router.py
app/services/: camera_service.py  reservation_service.py
static/: index.html  script.js  style.css
