[project]
name = "attendance-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pygrabber>=0.2",
    "python-multipart>=0.0.22",
    "pyvirtualcam>=0.15.0",
    "uvicorn>=0.40.0",
]
